--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - 'redis:/var/lib/redis/data'
 
-  app:
+  website:
     depends_on:
       - 'postgres'
       - 'redis'
